# tasks-manager

./: pyproject.toml
tasks_manager/: settings.py
