[tool.poetry]
name = "tasks-manager"
version = "0.1.0"
description = "Manage task with actions to do."
authors = ["Alejandro Marco Ramos <alejandro.marco.ramos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
